--- a/versions/1.4/alpine/Dockerfile
+++ b/versions/1.4/alpine/Dockerfile
@@ -19,9 +19,9 @@ ENV USER=100 \
 USER 0
 
 RUN apk --no-cache add bash rsync && \
-    mkdir -p ${HOME}/.pki/nssdb && \
-    chown -R 1001:0 ${HOME}/.pki && \
-    adduser -S -u 1001 -G root -h ${HOME} -s /sbin/nologin \
+    ln -sf /bin/bash /bin/sh && \
+    mkdir -p $HOME && \
+    adduser -S -u 1001 -G root -h $HOME -s /sbin/nologin \
       -g "Default Application User" default && \
     chown -R 1001:0 /opt/app-root
 
